tests/success/func_returning_array.crema
def int[] func(int a[])
{
  int result[] = [1,2,3]
  return result
}

