tests/fail/func_type_mismatch.crema
def int foo()
{
	return 32.3
}
